@@ -2,8 +2,8 @@ package com.datastax.spark.connector.cql
 
 import java.net.InetAddress
 
-import com.datastax.spark.connector.util.CassandraServer
 import org.scalatest.{FlatSpec, Matchers}
+import com.datastax.spark.connector.testkit._
 
 case class KeyValue(key: Int, group: Long, value: String)
 case class KeyValueWithConversion(key: String, group: Int, value: Long)
@@ -81,7 +81,7 @@ class CassandraConnectorSpec extends FlatSpec with Matchers with CassandraServer
   }
 
   it should "share internal Cluster object between multiple logical sessions created by different connectors to the same cluster" in {
-    val conn2 = CassandraConnector(InetAddress.getByName("127.0.0.1"))
+    val conn2 = CassandraConnector(InetAddress.getByName(DefaultHost))
     val session1 = conn.openSession()
     val threadCount1 = Thread.activeCount()
     val session2 = conn2.openSession()
