@@ -2,17 +2,16 @@ package com.datastax.spark.connector.rdd
 
 import java.net.InetAddress
 
+import scala.collection.JavaConversions._
+import org.scalatest.{BeforeAndAfter, FlatSpec, Matchers}
 import com.datastax.spark.connector._
 import com.datastax.spark.connector.cql.CassandraConnector
-import com.datastax.spark.connector.util.{CassandraServer, SparkServer}
-import org.scalatest.{BeforeAndAfter, FlatSpec, Matchers}
-
-import scala.collection.JavaConversions._
+import com.datastax.spark.connector.testkit._
 
 class CassandraJavaRDDSpec extends FlatSpec with Matchers with BeforeAndAfter with CassandraServer with SparkServer {
 
   useCassandraConfig("cassandra-default.yaml.template")
-  val conn = CassandraConnector(InetAddress.getByName("127.0.0.1"))
+  val conn = CassandraConnector(InetAddress.getByName(DefaultHost))
 
   before {
     conn.withSessionDo { session =>
