@@ -1,6 +1,6 @@
-package com.datastax.spark.connector.util
+package com.datastax.spark.connector.testkit
 
-import org.apache.spark.{SparkEnv, SparkConf, SparkContext}
+import org.apache.spark.{SparkConf, SparkContext, SparkEnv}
 
 trait SparkServer {
   val conf = SparkServer.conf
