@@ -4,8 +4,8 @@ import java.io.IOException
 
 import com.datastax.spark.connector._
 import com.datastax.spark.connector.cql.CassandraConnector
+import com.datastax.spark.connector.testkit.{SparkServer, CassandraServer}
 import com.datastax.spark.connector.types.TypeConverter
-import com.datastax.spark.connector.util.{CassandraServer, SparkServer}
 import org.scalatest.{BeforeAndAfter, FlatSpec, Matchers}
 
 import scala.collection.JavaConversions._
