@@ -1,11 +1,12 @@
 package com.datastax.spark.connector.demo
 
 import org.apache.spark.{SparkContext, SparkConf}
+import com.datastax.spark.connector.testkit._
 
 trait DemoApp {
 
-  val sparkMasterHost = "127.0.0.1"
-  val cassandraHost = "127.0.0.1"
+  val sparkMasterHost = DefaultHost
+  val cassandraHost = DefaultHost
 
   // Tell Spark the address of one Cassandra node:
   val conf = new SparkConf(true).set("spark.cassandra.connection.host", cassandraHost)
@@ -16,6 +17,4 @@ trait DemoApp {
 
 object DemoApp {
   def apply(): DemoApp = new DemoApp {}
-
-  case class WordCount(word: String, count: Int)
 }
